<resources>
    <string name="app_name">CALCULADORAPRO</string>
    <string name="ce">CE</string>
    <string name="c">C</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="division">/</string>
    <string name="multiply">*</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="equals">=</string>
    <string name="change">"+/-</string>
    <string name="cero">0</string>
    <string name="point">.</string>
    <string name="insertedNumber">0</string>
    <string name="history">""</string>






</resources>